# supermarket-app-exploration

./: .env.example  .gitignore  Cargo.toml  README.md  compose.yaml  package-lock.json  package.json  pnpm-lock.yaml
authenticator/: forge.config.ts  forge.env.d.ts  package.json  vite.base.config.ts  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.ts
authenticator/src/: main.ts  renderer.ts
docs/: development.md  index.md
web/: .gitignore  Cargo.toml  README.md
web/app/: Cargo.toml
web/app/src/: components.rs  context.rs  lib.rs
web/app/src/actions/: provider.rs
web/app/src/components/: auth.rs
web/app/src/components/auth/: header.rs  sign_in_button.rs
web/app/src/components/navigation/: topbar.rs
web/app/src/components/radix_ui/: slot.rs
web/app/src/components/ui/: button.rs
web/app/src/pages/: auth.rs
web/app/src/pages/auth/: sign_in.rs
web/client/: Cargo.toml
web/client/src/: lib.rs
web/database/: Cargo.toml
web/database/src/: lib.rs
web/database/src/entities/: email_address.rs  mod.rs  prelude.rs  provider.rs  provider_connection.rs  sea_orm_active_enums.rs  user.rs
web/end2end/: package-lock.json
web/migration/: Cargo.toml
web/migration/src/: base.rs  lib.rs  m20240314_090725_create_auth.rs
web/resources/: Cargo.toml  build.rs
web/server/: Cargo.toml
web/server/src/: auth.rs  database.rs  fileserv.rs  main.rs  state.rs
web/src/: app.rs  auth.rs  database.rs  fileserv.rs  lib.rs  main.rs  state.rs
web/src/actions/: provider.rs
web/src/components/auth/: layout.rs
web/src/components/navigation/: topbar.rs
web/src/entities/: prelude.rs  sea_orm_active_enums.rs
web/src/pages/auth/: signin.rs  signout.rs
