[package]
name = "supermarket-web"
version = "0.1.0"
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait.workspace = true
axum = { version = "0.7.4", features = ["macros"], optional = true }
axum-login = { version = "0.14.0", optional = true }
console_error_panic_hook = { version = "0.1.7" }
dotenvy = { version = "0.15.7", optional = true }
http = { version = "1.1.0" }
leptos = { version = "0.6.9", features = ["nightly"] }
leptos_axum = { version = "0.6.9", optional = true }
leptos_meta = { version = "0.6.9", features = ["nightly"] }
leptos_router = { version = "0.6.9", features = ["nightly"] }
openidconnect = { version = "3.5.0", optional = true }
sea-orm = { version = "0.12.14", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
], optional = true }
serde.workspace = true
thiserror = { version = "1.0.57" }
tokio = { version = "1.36.0", features = ["rt-multi-thread"], optional = true }
tower = { version = "0.4.13", optional = true }
tower-http = { version = "0.5.2", features = ["fs"], optional = true }
tracing = { version = "0.1.40", optional = true }
wasm-bindgen = { version = "0.2.92" }

[features]
default = ["ssr"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
    "dep:axum",
    "dep:axum-login",
    "dep:dotenvy",
    "dep:leptos_axum",
    "dep:openidconnect",
    "dep:sea-orm",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:tracing",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[package.metadata.leptos]
# See https://github.com/leptos-rs/cargo-leptos#parameters-reference

output-name = "supermarket-web"

site-root = "target/site"
site-pkg-dir = "pkg"

tailwind-input-file = "style/tailwind.css"
tailwind-config-file = "tailwind.config.ts"

assets-dir = "public"

site-addr = "127.0.0.1:3000"
reload-port = 3001

end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

browserquery = "defaults"

watch = false
env = "DEV"

bin-features = ["ssr"]
bin-default-features = false

lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
