[package]
name = "supermarket-web-migration"
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm-migration = { version = "0.12.0", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
] }
