[package]
name = "supermarket-web-server"
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
axum = { version = "0.8.0", features = ["macros"] }
axum-login = "0.14.0"
dotenvy = "0.15.7"
leptos = { workspace = true, features = ["ssr"] }
leptos_axum.workspace = true
openidconnect = "3.5.0"
supermarket-web-app = { path = "../app", default-features = false, features = [
    "ssr",
] }
supermarket-web-database = { path = "../database", features = ["server"] }
thiserror.workspace = true
tokio.workspace = true
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }
